# taigi-emojis

./: .gitignore  CLAUDE.md  Makefile  Package.swift  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: emoji-data-authoring.md  generator.md  output-contract.md
.claude/skills/fetch-emoji/: SKILL.md
data/: SOURCES.md
scripts/: generate.py
src/: overrides.tsv
tests/: test_generate.py
